<resources>
    <string name="app_name">Sistem Pakar \nKerusakan Pompa Air</string>
    <string name="action_settings">Settings</string>
    <string name="linear">LINEAR</string>
    <string name="tabs_stepper">Tabs Stepper</string>
    <string name="text_stepper">Text Stepper</string>
    <string name="progress_stepper">Progress Stepper</string>
    <string name="dots_stepper">Dots Stepper</string>
    <string name="non_linear">NON LINEAR</string>
    <string name="tabs_stepper_alternative">Tabs Stepper (Alternative)</string>
    <string name="tabs_stepper_classic">Tabs Stepper (Classic)</string>
    <string name="text_back">Tekan sekali lagi untuk keluar</string>
    <string name="text_title_splash">Sistem Pakar \nPendeteksi kerusakan pada pompa air</string>
    <string name="title_activity_gejala">Gejala</string>
    <string name="title_activity_kerusakan">Kerusakan</string>
    <string name="title_activity_panduan">Panduan</string>
    <string name="title_activity_tentang">Tentang</string>
    <string name="panduan_aplikasi">Panduan Aplikasi</string>
    <string name="gejala_kerusakan">Gejala Kerusakan</string>
    <string name="kerusakan">Kerusakan</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="menu_utama">Menu utama</string>
    <string name="mulai_sistem_pakar">Mulai Sistem Pakar</string>

    <!-- stepper -->
    <string name="ms_prev">Prev</string>
    <string name="ms_next">Next</string>
    <string name="ms_end">Done</string>
    <string name="ms_continue">Next</string>
    <string name="ms_optional">Optional</string>
    <string name="ms_text_step">Step $current of $total</string>
    <string name="title_activity_main_result">MainResultActivity</string>
    <string name="text_dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s \nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s \nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s \nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s</string>
    <string name="hasil_dan_kesimpulan">Hasil dan Kesimpulan</string>

</resources>
