<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="id.sukenda.burisma.activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:elevation="@dimen/default_elevation"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="2dp"
            android:text="@string/menu_utama"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_desc" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_menu_begin_expert"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/vertical_margin"
                    android:background="@drawable/btn_action"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_begin_expert" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/mulai_sistem_pakar"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_desc"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/small_margin">

                    <ImageView
                        android:id="@+id/image_menu_gejala"
                        android:layout_width="@dimen/avatar_size"
                        android:layout_height="@dimen/avatar_size"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/vertical_margin"
                        android:background="@drawable/btn_action"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_info_kerusakan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/gejala_kerusakan"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_size_desc"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/small_margin">

                    <ImageView
                        android:id="@+id/image_menu_penyakit"
                        android:layout_width="@dimen/avatar_size"
                        android:layout_height="@dimen/avatar_size"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/vertical_margin"
                        android:background="@drawable/btn_action"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_trable_pump" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/kerusakan"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_size_desc"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/small_margin">

                    <ImageView
                        android:id="@+id/image_menu_panduan"
                        android:layout_width="@dimen/avatar_size"
                        android:layout_height="@dimen/avatar_size"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/vertical_margin"
                        android:background="@drawable/btn_action"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_help_aplication" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/panduan_aplikasi"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_size_desc"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/small_margin">

                    <ImageView
                        android:id="@+id/image_menu_about"
                        android:layout_width="@dimen/avatar_size"
                        android:layout_height="@dimen/avatar_size"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/vertical_margin"
                        android:background="@drawable/btn_action"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_about_aplication" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tentang_aplikasi"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_size_desc"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
